--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^2.47.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-element-to-jsx-string": "^15.0.0",
     "simplex-noise": "^4.0.1",
+    "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
