--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.2.1"
   },
