--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "react-hook-form": "^7.51.3",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.3.0"
-  },
-  "devDependencies": {
+    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.0.1",
     "postcss": "^8"
+  },
+  "devDependencies": {
+
   },
   "engines": {
     "node": "20.x"
